Nuclear option: Allow all CORS traffic